--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.1.0",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
