--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.490.0",
+    "@aws-sdk/credential-providers": "^3.490.0",
+    "@aws-sdk/s3-request-presigner": "^3.490.0",
+    "@aws-sdk/signature-v4-crt": "^3.489.0",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
+    "aws-crt": "^1.20.1",
+    "aws-sdk": "^2.1536.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
@@ -25,7 +31,6 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
