--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/credential-providers": "^3.490.0",
     "@aws-sdk/s3-request-presigner": "^3.490.0",
     "@aws-sdk/signature-v4-crt": "^3.489.0",
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
