build: change env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=economins
+AWS_SECRET_ACCESS_KEY=economins
 AWS_REGION=ap-northeast-2
 AWS_BUCKET_NAME=economins
