--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,7 +14,10 @@ on:
       aws_account_id:
         description: AWS Account ID
         type: string
-
+      aws_region:
+        description: Target AWS Region
+        default: "ap-northeast-2"
+        type: string
 
 jobs:
   docker:
