--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -56,6 +56,6 @@ jobs:
           REPOSITORY: ${{ inputs.aws_ecr_repo }}
           IMAGE_TAG: ${{ inputs.image_tag }}
         run: |
-          docker build -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG .
+          docker build --platform=linux/arm64 -t $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
           echo "full_image=$REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG"
