--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.3.3",
     "use-debounce": "^10.0.0",
+    "vis-timeline": "^7.7.4",
     "zod": "^3.22.2"
   },
   "devDependencies": {
