--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,13 @@
 user  nginx;
 worker_processes  auto;
+
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
+
 events {
     worker_connections  1024;
 }
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -12,14 +15,17 @@ http {
     upstream economins {
         server app:3000;
     }
+
     server {
         listen 80;
-
         server_name economins.com;
+
         server_tokens off;
-        #location /.well-known/acme-challenge/ {
-        #    root /var/www/certbot;
-        #}
+
+        location /.well-known/acme-challenge/ {
+           root /var/www/certbot;
+        }
+
         location / {
             return 301 https://$host$request_uri;
         }
@@ -27,12 +33,23 @@ http {
 
     server {
         listen 443 ssl;
-
         server_name economins.com;
+
         server_tokens off;
 
         ssl_certificate /etc/letsencrypt/live/economins.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/economins.com/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        ssl_session_cache shared:SSL:20m;
+        ssl_session_tickets on;
+
+        client_max_body_size 5M;
+        client_body_timeout   10s;
+        client_header_timeout 10s;
+        keepalive_timeout     10s;
+        send_timeout          10s;
 
         location / {
             proxy_pass http://economins;
@@ -49,6 +66,4 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
