--- a/package.json
+++ b/package.json
@@ -9,32 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.490.0",
-    "@aws-sdk/credential-providers": "^3.490.0",
-    "@aws-sdk/s3-request-presigner": "^3.490.0",
-    "@aws-sdk/signature-v4-crt": "^3.489.0",
+    "@aws-sdk/client-s3": "^3.828.0",
+    "@aws-sdk/credential-providers": "^3.828.0",
+    "@aws-sdk/s3-request-presigner": "^3.828.0",
+    "@aws-sdk/signature-v4-crt": "^3.828.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@next/third-parties": "^14.1.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "20.5.7",
-    "@vercel/postgres": "^0.5.0",
-    "autoprefixer": "10.4.15",
-    "aws-crt": "^1.20.1",
-    "aws-sdk": "^2.1536.0",
-    "bcrypt": "^5.1.1",
+    "@types/node": "20.14.8",
     "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
-    "next": "^14.0.5",
-    "postcss": "8.4.31",
+    "next": "^14.2.30",
     "react": "18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.3.3",
+    "tailwindcss": "3.4.17",
     "use-debounce": "^10.0.0",
     "vis-timeline": "^7.7.4",
     "zod": "^3.22.2"
@@ -43,12 +36,15 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@vercel/style-guide": "^5.0.1",
+    "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
+    "postcss": "8.4.31",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4"
+    "prettier-plugin-tailwindcss": "0.5.4",
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": ">=18.17.0"
