--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwindcss": "3.4.17",
     "use-debounce": "^10.0.0",
     "vis-timeline": "^7.7.4",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/react": "18.2.21",
