--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,69 +1,126 @@
-user  nginx;
-worker_processes  auto;
+user nginx;
+worker_processes auto;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log warn;
+pid       /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+
+    keepalive_timeout 10s;
+    types_hash_max_size 4096;
+
+    ##
+    # DNS Resolver (Docker 서비스 네임, 외부 DNS 모두 처리)
+    ##
+    resolver 8.8.8.8 1.1.1.1 valid=300s;
+    resolver_timeout 5s;
+
+    ##
+    # 로깅 포맷
+    ##
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+
+
+    ##
+    # 압축 설정 — Brotli 우선, gzip fallback
+    ##
+
+    # Brotli — Brotli 모듈이 설치된 경우에만 활성화됨
+    brotli on;
+    brotli_comp_level 5;
+    brotli_static on;
+    brotli_types text/plain text/css application/json application/javascript application/xml;
+
+    # gzip fallback
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css application/json application/javascript application/xml;
+
+    ##
+    # 업스트림 설정
+    ##
     upstream economins {
         server app:3000;
+        keepalive 32;
     }
 
+    ##
+    # HTTP → HTTPS 리다이렉트 (Certbot 경로 제외)
+    ##
     server {
         listen 80;
         server_name economins.com;
 
-        server_tokens off;
-
         location /.well-known/acme-challenge/ {
-           root /var/www/certbot;
+            root /var/www/certbot;
         }
 
         location / {
-            return 301 https://$host$request_uri;
+            return 301 https://economins.com$request_uri;
         }
     }
 
+    ##
+    # HTTPS 서버
+    ##
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name economins.com;
 
         server_tokens off;
 
-        ssl_certificate /etc/letsencrypt/live/economins.com/fullchain.pem;
+        ##
+        # TLS 설정
+        ##
+        ssl_certificate     /etc/letsencrypt/live/economins.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/economins.com/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-        ssl_session_cache shared:SSL:20m;
-        ssl_session_tickets on;
+        # 보안 헤더
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        client_max_body_size 5M;
-        client_body_timeout   10s;
-        client_header_timeout 10s;
-        keepalive_timeout     10s;
-        send_timeout          10s;
+        client_max_body_size 10M;
+
+        ##
+        # Proxy Timeouts & Headers
+        ##
+        proxy_connect_timeout 5s;
+        proxy_send_timeout    30s;
+        proxy_read_timeout    30s;
 
         location / {
             proxy_pass http://economins;
+
             proxy_http_version 1.1;
+
+            # WebSocket
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
+            proxy_set_header Connection "upgrade";
+
+            # Host/IP 전달
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # 캐시 우회
             proxy_cache_bypass $http_upgrade;
         }
     }
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
 }
