--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ AWS_ACCESS_KEY_ID=economins
 AWS_SECRET_ACCESS_KEY=economins
 AWS_REGION=ap-northeast-2
 AWS_BUCKET_NAME=economins
+CDN_BASE_URL=https://
