--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
+    "dayjs": "^1.11.19",
     "next": "^14.2.35",
     "react": "18.2.0",
+    "react-aria": "^3.45.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
+    "react-stately": "^3.43.0",
     "tailwindcss": "3.4.17",
     "use-debounce": "^10.0.0",
     "vis-timeline": "^7.7.4",
