--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
     "dayjs": "^1.11.19",
+    "framer-motion": "^12.29.2",
     "next": "^14.2.35",
     "react": "18.2.0",
     "react-aria": "^3.45.0",
