chore: upgrade to Next 16, React 19 and fix related type issues

--- a/package.json
+++ b/package.json
@@ -13,45 +13,45 @@
     "@aws-sdk/credential-providers": "^3.828.0",
     "@aws-sdk/s3-request-presigner": "^3.828.0",
     "@aws-sdk/signature-v4-crt": "^3.828.0",
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.1",
-    "@next/third-parties": "^14.2.35",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "20.14.8",
-    "chart.js": "^4.4.9",
+    "@types/node": "25.2.3",
+    "chart.js": "^4.5.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.1.0",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.1.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
-    "framer-motion": "^12.29.2",
-    "next": "^14.2.35",
-    "react": "18.2.0",
+    "framer-motion": "^12.34.0",
+    "next": "^16.1.6",
+    "react": "19.2.4",
     "react-aria": "^3.45.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "18.2.0",
-    "react-stately": "^3.43.0",
-    "tailwindcss": "3.4.17",
-    "use-debounce": "^10.0.0",
-    "vis-timeline": "^7.7.4",
-    "zod": "^3.22.2",
-    "zustand": "^5.0.6"
+    "react-chartjs-2": "^5.3.1",
+    "react-dom": "19.2.4",
+    "tailwindcss": "3.4.19",
+    "use-debounce": "^10.1.0",
+    "vis-data": "^8.0.3",
+    "vis-timeline": "^8.5.0",
+    "vis-util": "^6.0.0",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.14",
-    "@vercel/style-guide": "^5.0.1",
+    "@types/react": "19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "eslint-config-prettier": "9.0.0",
     "postcss": "8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
-    "typescript": "5.3.3"
+    "typescript": "5.9.3"
   },
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=20.0.0"
   }
 }
